# dyad

./: .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  README.md  ROADMAP.md
scripts/: mcp-smoke.sh
src/: action.rs  app.rs  buffer.rs  git.rs  input.rs  install.rs  language.rs  lsp.rs  main.rs  mcp.rs  proposals.rs  protocol.rs  syntax.rs  terminal.rs  theme.rs  tree.rs  tx.rs  ui.rs  view.rs
tests/: buffer_io_integration.rs  mcp_integration.rs
